src/test/ui/single-use-lifetime/two-uses-in-inherent-method-argument-and-return.stderr
error: lifetime parameter `'f` only used once
  --> $DIR/two-uses-in-inherent-method-argument-and-return.rs:22:6
   |
LL | impl<'f> Foo<'f> { //~ ERROR `'f` only used once
   |      ^^
   |
note: lint level defined here
  --> $DIR/two-uses-in-inherent-method-argument-and-return.rs:14:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

